--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,12 +14,15 @@
   <nav>
     <ul>
       <li><a href="/">home</a></li>
-      <li><a href="/about">about</a></li>
+      <li><a href="/about/">about</a></li>
     </ul>
   </nav>
 </header>
 
 <div class="content">
+
+<h1>{{ page.title }}</h1>
+<p class="date">{{ page.date | date: "%b  %-d, %Y" }}</p>
 
 {{ content }}
 </div>
