basic layout finalized

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,23 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8" />
-
-  <title>{{ page.title }}</title>
-
-  <link rel="stylesheet" href="/css/default.css" type="text/css" />
-</head>
-
-<body>
-
-<header>
-  <nav>
-    <ul>
-      <li><a href="/">home</a></li>
-      <li><a href="/about">about</a></li>
-    </ul>
-  </nav>
-</header>
+{% include header.html %}
 
 <div class="content">
 
