added archives, minor fixes

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,6 +14,7 @@
   <nav>
     <ul>
       <li class="{{ page.home }}"><a href="/">home</a></li>
+      <li class="{{ page.archives }}"><a href="/archives/">archives</a></li>
       <li class="{{ page.about }}"><a href="/about/">about</a></li>
     </ul>
   </nav>
