--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@
 <div class="content">
 
 <h1>{{ page.title }}</h1>
-<p class="date">{{ page.date | date: "%b  %-d, %Y" }}</p>
+<p class="date">{{ page.date | date_to_string }}</p>
 
 {{ content }}
 </div>
