added redcarpet, latex support

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,6 +6,8 @@
   <title>{{ page.title }}</title>
 
   <link rel="stylesheet" href="/css/default.css" type="text/css" />
+
+  <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 </head>
 
 <body>
