--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
 
   <link rel="stylesheet" href="/css/default.css" type="text/css" />
 
-  <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+  <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 </head>
 
 <body>
