--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,6 +4,7 @@
   <ul class="icons">
     <li><a href="https://github.com/avanpo"><img src="/img/icon-github.png" /></a></li>
     <li><a href="https://twitter.com/alexvp"><img src="/img/icon-twitter.png" /></a></li>
+    <li><a href=https://www.linkedin.com/in/avanpoppelen"><img src="/img/icon-linkedin.png" /></a></li>
   </ul>
 </footer>
 
