--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,6 +6,10 @@
 <h1>{{ page.title }}</h1>
 
 {{ content }}
+
+{% if page.comments %}
+{% include disqus.html %}
+{% endif %}
 </div>
 
 {% include footer.html %}
