--- a/css/default.css
+++ b/css/default.css
@@ -192,7 +192,19 @@ div.content ol li {
   list-style: decimal;
 }
 
+div.content code {
+  background-color: #002b36;
+  color: #93a1a1;
+}
+
+div.content pre {
+  margin: 0 0 1em 0;
+  padding: 2px 5px;
+  font-size: 11pt;
+}
+
 div.content span.date {
+  width: 150px;
   text-transform: uppercase;
   color: #aaa;
 }
