syntax highlighting styles

--- a/css/default.css
+++ b/css/default.css
@@ -40,7 +40,7 @@ a:link, a:visited {
   padding: 0 2px;
   color: #3677a9;
   text-decoration: none;
-  border-bottom: 1px solid #5697c9;
+  border-bottom: 1px solid #3677a9;
 }
 
 a:hover {
