--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
   <title>{{ page.title }}</title>
 
   <link rel="stylesheet" href="/css/default.css" type="text/css" />
-  <link rel="stylesheet" href="/css/manni.css" type="text/css" />
+  <link rel="stylesheet" href="/css/native.css" type="text/css" />
 
   <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 </head>
