--- a/css/default.css
+++ b/css/default.css
@@ -204,7 +204,7 @@ div.content .highlight {
   padding: 5px 10px;
   background: #f9f9f9;
   border: 1px solid #eeeeee;
-  border-left: 3px;
+  border-left: 3px solid #eeeeee;
 }
 
 div.content code {
