--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,9 +5,10 @@
 
   <title>{{ page.title }}</title>
 
-  <link rel="stylesheet" href="/css/default.css" type="text/css" />
-  <link rel="stylesheet" href="/css/manni.css" type="text/css" />
+  <link href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,700,400italic|Merriweather:400,400italic,700,700italic|Roboto:300' rel='stylesheet' type='text/css'>
 
+  <link rel="stylesheet" href="/css/default.css" type="text/css" />
+  <link rel="stylesheet" href="/css/solarized-dark.css" type="text/css" />
   <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 </head>
 
