--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,7 @@
 {% if page.comments %}
 <div class="content">
 
-<h2>Comments</h2>
+<h2 class="comments">Comments</h2>
 {% include disqus.html %}
 </div>
 {% endif %}
