--- a/css/manni.css
+++ b/css/manni.css
@@ -1,8 +1,8 @@
-.highlight .hll { color: #AAAAAA; background-color: #ffffcc }
+.highlight .hll { color: #AAAAAA; /*background-color: #ffffcc*/ }
 .highlight .c { color: #0099FF; font-style: italic } /* Comment */
-.highlight .err { color: #AAAAAA; /*background-color: #FFAAAA*/ } /* Error */
+.highlight .err { color: #FF3333; /*background-color: #FFAAAA*/ } /* Error */
 .highlight .k { color: #006699; font-weight: bold } /* Keyword */
-.highlight .o { color: #555555 } /* Operator */
+.highlight .o { color: #444444 } /* Operator */
 .highlight .cm { color: #0099FF; font-style: italic } /* Comment.Multiline */
 .highlight .cp { color: #009999 } /* Comment.Preproc */
 .highlight .c1 { color: #0099FF; font-style: italic } /* Comment.Single */
