--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,6 +11,10 @@
   <link rel="stylesheet" href="/css/manni.css" type="text/css" />
 
   <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+
+  <script type="text/x-mathjax-config">
+    MathJax.Hub.Config({ TeX: { extensions: ["color.js"] }});
+  </script>
 </head>
 
 <body>
