--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,9 +2,9 @@
   <p>Written and maintained by Alex van Poppelen.</p>
 
   <ul class="icons">
-    <li><a href="https://github.com/avanpo"><img src="/img/icon-github.png" /></a></li>
-    <li><a href="https://twitter.com/alexvp"><img src="/img/icon-twitter.png" /></a></li>
-    <li><a href="https://www.linkedin.com/in/avanpoppelen"><img src="/img/icon-linkedin.png" /></a></li>
+    <li><a href="https://github.com/avanpo"><span class="fab fa-github"></span></a></li>
+    <li><a href="https://twitter.com/alexvp"><span class="fab fa-twitter"></span></a></li>
+    <li><a href="/feed.xml"><span class="fas fa-rss-square"></span></a></li>
   </ul>
 </footer>
 
