--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8">
 
   <title>{{ page.title }}</title>
 
-  <link href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,700,400italic|Merriweather:400,400italic,700,700italic|Roboto:300' rel='stylesheet' type='text/css' />
+  <link href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,700,400italic|Merriweather:400,400italic,700,700italic|Roboto:300' rel='stylesheet' type='text/css'>
 
-  <link rel="stylesheet" href="/css/default.css" type="text/css" />
-  <link rel="stylesheet" href="/css/manni.css" type="text/css" />
+  <link rel="stylesheet" href="/css/default.css" type="text/css">
+  <link rel="stylesheet" href="/css/manni.css" type="text/css">
+  <link  href="https://use.fontawesome.com/releases/v5.0.2/css/all.css" rel="stylesheet" type='text/css'>
+
+  {% feed_meta %}
 
   <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 
