--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,6 +19,15 @@
   <script type="text/x-mathjax-config">
     MathJax.Hub.Config({ TeX: { extensions: ["color.js"] }});
   </script>
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-139497638-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-139497638-1');
+  </script>
+
 </head>
 
 <body>
